# mlops-tetouan-equipo31

./: .gitignore  LICENSE  Makefile  README.md  api.py  dvc.yaml  pyproject.toml  requirements.txt  run_training.py
docs/: mkdocs.yml
docs/docs/: index.md
mlops_consumo_energia_tetouan/: __init__.py  dataset.py  features.py  plots.py
mlops_consumo_energia_tetouan/modeling/: evaluate.py  predict.py  train.py
mlops_consumo_energia_tetouan/scripts/: prepare_data.py
mlruns/0/: meta.yaml
mlruns/376973348358816173/: meta.yaml
mlruns/376973348358816173/08d49d3881c241859943553b0293b93c/: meta.yaml
mlruns/376973348358816173/41cd79b73af54aef87010611700729d9/: meta.yaml
mlruns/376973348358816173/41cd79b73af54aef87010611700729d9/tags/: mlflow.source.git.commit
mlruns/376973348358816173/4e9b4bedacdb4776aeb145aae653bf09/: meta.yaml
mlruns/376973348358816173/4e9b4bedacdb4776aeb145aae653bf09/metrics/: mae  r2  rmse
mlruns/376973348358816173/4e9b4bedacdb4776aeb145aae653bf09/outputs/m-b97a7848c0934da9821a42b320d23545/: meta.yaml
mlruns/376973348358816173/4e9b4bedacdb4776aeb145aae653bf09/params/: target
mlruns/376973348358816173/4e9b4bedacdb4776aeb145aae653bf09/tags/: git_commit  mlflow.runName
mlruns/376973348358816173/models/m-b97a7848c0934da9821a42b320d23545/: meta.yaml
mlruns/376973348358816173/models/m-b97a7848c0934da9821a42b320d23545/artifacts/: MLmodel  (+4 more)
mlruns/models/ConsumoEnergia_Tetouan/: meta.yaml
mlruns/models/ConsumoEnergia_Tetouan/version-1/: meta.yaml
tests/: test_data.py  test_dataset.py  test_features.py  test_integration_pipeline.py
(+4 files in other folders)
