[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops_consumo_energia_tetouan"
version = "0.0.1"
description = "Proyecto Fase 2 - Seguimiento de Experimentos y Model Registry"
authors = [
  { name = "Francisco Saavedra" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.11.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["mlops_consumo_energia_tetouan"]
force_sort_within_sections = true


